--- a/app/src/main/res/layout/activity_create_happening.xml
+++ b/app/src/main/res/layout/activity_create_happening.xml
@@ -74,7 +74,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_medium"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingHorizontal="15dp">
 
                 <RadioButton
                     android:id="@+id/create_emoji1"
@@ -83,7 +84,7 @@
                     android:layout_marginHorizontal="@dimen/default_margin_small"
                     android:button="@color/colorAccent"
                     android:text="🍻"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
                 <RadioButton
                     android:id="@+id/create_emoji2"
@@ -93,7 +94,7 @@
                     android:alpha="0.5"
                     android:button="@color/colorAccent"
                     android:text="🍷"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
                 <RadioButton
                     android:id="@+id/create_emoji3"
@@ -103,7 +104,7 @@
                     android:alpha="0.5"
                     android:button="@color/colorAccent"
                     android:text="🍔"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
                 <RadioButton
                     android:id="@+id/create_emoji4"
@@ -113,7 +114,7 @@
                     android:alpha="0.5"
                     android:button="@color/colorAccent"
                     android:text="☕️"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
                 <RadioButton
                     android:id="@+id/create_emoji5"
@@ -124,7 +125,7 @@
                     android:alpha="0.5"
                     android:button="@color/colorAccent"
                     android:text="🚶"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
                 <RadioButton
                     android:id="@+id/create_emoji6"
@@ -135,7 +136,7 @@
                     android:alpha="0.5"
                     android:button="@color/colorAccent"
                     android:text="🤔"
-                    android:textSize="42sp" />
+                    android:textSize="34sp" />
 
             </RadioGroup>
 
@@ -152,7 +153,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="50dp">
 
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/autocomplete_fragment"
@@ -183,7 +184,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/default_margin_large"
                     android:layout_marginTop="@dimen/default_margin_small"
-                    android:backgroundTint="@color/lightGrey" />
+                    android:backgroundTint="@color/lightGrey"
+                    android:textColor="#000000" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
